Good handling of metrics + change of messageTreatment